--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ a {
 
 .container{
     width: 1600px;
+    height: 2928px;
     margin: 0 auto;
     color: #2F303A;
 }
@@ -95,7 +96,7 @@ a {
     background-image: url(../img/Img\(16\)\(1\).jpg);
     width: 1600px;
     height: 600px;
-    padding-top: 280px;
+    padding-top: 200px;
 }
 
 .hero-text {
@@ -131,6 +132,7 @@ a {
 .section {
     display: flex;
     justify-content: center;
+    padding-top: 90px;
 }
 
 .container-ul {
@@ -146,8 +148,8 @@ a {
 }
 
 .instegram {
-    padding: 25px 100px;
-    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .text-h {
@@ -159,7 +161,6 @@ a {
     font-weight: 700;
     letter-spacing: 0.42px;
     text-transform: uppercase;
-
 }
 
 .text-p {
@@ -180,12 +181,22 @@ a {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    letter-spacing: 1.08px; 
+    padding-bottom: 94px;
+}
+
+.photo-do {
+    padding-bottom: 95px;
 }
 
 .ccc {
     display: flex;
     justify-content: space-around;
+}
+
+.container2 {
+    width: 1600px;
+    height: 708px;
+    background-color: #F5F4FA;
 }
 
 .text-h2 {
@@ -196,12 +207,13 @@ a {
     font-weight: 700;
     line-height: normal;
     letter-spacing: 1.08px;
+    padding-top: 94px;
 }
 
-.container2 {
-    width: 1600px;
-    height: 708px;
-    background-color: #F5F4FA;
+.container3 {
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
 }
 
 .container-div-2 {
@@ -218,56 +230,43 @@ a {
 }
 
 .team-list-title {
+    color: #212121;
+    text-align: center;
     font-family: 'Roboto';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 0.48px;
+    padding-top: 20px;
+}
+
+.team-list-paragraph {
+    color: #757575;
+    text-align: center;
+    font-family: 'Roboto';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 0.48px;
+    padding-top: 10px;
+}
+
+.section-clients {
+    width: 1600px;
+    height: 400px;
+}
+
+.text-h0 {
+    color: #212121;
+    text-align: center;
+    font-family: 'Roboto';
+    font-size: 36px;
     font-style: normal;
     font-weight: 700;
-    font-size: 18px;
-    line-height: 36px;
-    letter-spacing: 0.06em;
-    color: #212121;
-}
-
-.social-network {
-    width: 44px;
-    height: 44px;
-}
-
-.social-network:hover, .social-network:focus {
-    background-color: #2196F3;
-    border-radius: 44px 44px 44px 44px;
-}
-
-.social-network-2 {
-    display: flex;
-    align-items: center;
-}
-
-.list-clients {
-    width: 1170px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.list {
-    width: 170px;
-    height: 92px;
-    border-radius: 4px;
-    border: 1px solid #AFB1BB;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.list-a {
-    width: 1170px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.class-svg {
-    width: 106px;
-    height: 60px;
-    fill:#AFB1B8;
+    line-height: normal;
+    letter-spacing: 1.08px;
 }
 
 .footer{
@@ -282,12 +281,11 @@ a {
     font-size: 26px;
     font-weight: 700;
     line-height: normal;
-    letter-spacing: 0.78px;
-    padding: 0 60 0 161;
+    padding-top: 60px;
+    padding-left: 161px;
 }
 
 .geolocation {
-    padding: 111px 0 120px 215px;
     display: flex;
     flex-direction: column;
     color: #FFF;
@@ -315,4 +313,32 @@ a {
 
 .nav-list-email-2:hover, .nav-list-email-2:focus {
     color: #2196F3;
+}
+
+.text-footer {
+    color: #FFF;
+    font-family: 'Roboto';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
+    flex-direction: row;
+}
+
+button {
+    width: 200px;
+    height: 50px;
+    border-radius: 4px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    color: #FFF;
+    text-align: center;
+    font-family: 'Roboto';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px; /* 187.5% */
+    letter-spacing: 0.96px;
 }
