--- a/css/styles.css
+++ b/css/styles.css
@@ -212,7 +212,7 @@ a {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    padding-bottom: 94px;
+    margin-bottom: 50px;
 }
 
 .photo {
@@ -235,13 +235,12 @@ a {
 
 /* Наша команда */
 
-.container2 {
-    width: 1600px;
-    height: 708px;
+.team {
     background-color: #F5F4FA;
+    padding: 94px 0 ;
 }
 
-.text {
+.team-text {
     color: #212121;
     text-align: center;
     font-size: 36px;
@@ -249,27 +248,20 @@ a {
     font-weight: 700;
     line-height: normal;
     letter-spacing: 1.08px;
-    padding-top: 94px;
-}
-
-.container3 {
-    display: flex;
-    justify-content: center;
-    padding-top: 50px;
+    margin-bottom: 50px;
 }
 
 .cards {
+    display: flex;
+    justify-content: ;
+}
+
+.team-cards {
     width: 270px;
     height: 428px;
-    border-radius: 0px 0px 4px 4px;
     background: #FFF;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-    margin: 30px;
-
-    background-image: url("../img/icons/instagram2.svg");
-    background-image: url("../img/icons/twitter2.svg");
-    background-image: url("../img/icons/facebook2.svg");
-    background-image: url("../img/icons/linkedin2.svg");
+    border-radius: 0px 0px 4px 4px;
 }
 
 .team-list-title {
