--- a/css/styles.css
+++ b/css/styles.css
@@ -218,7 +218,8 @@ a {
 .photo {
     width: 100%;
     height: 100%;
-    object-position: ;
+    object-fit: cover;
+    object-position: center;
 }
 
 .work-list {
@@ -253,7 +254,7 @@ a {
 
 .cards {
     display: flex;
-    justify-content: ;
+    justify-content: space-between;
 }
 
 .team-cards {
@@ -293,11 +294,9 @@ a {
 .section-clients {
     width: 1600px;
     height: 400px;
-
-    /* background-image: url("../img/icons/Logo\(1\).svg"); */
 }
 
-/* .text-h0 {
+.clients-text {
     color: #212121;
     text-align: center;
     font-family: 'Roboto';
@@ -306,7 +305,8 @@ a {
     font-weight: 700;
     line-height: normal;
     letter-spacing: 1.08px;
-} */
+    margin-top: 94px;
+}
 
 /* footer */
 
