--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,11 @@ a {
     background-repeat: no-repeat;
 }
 
+
+
 /*Чим ми займаємося*/
+
+
 
 .work {
     padding-bottom: 94px;
@@ -289,11 +293,44 @@ a {
     padding-top: 10px;
 }
 
+/*  */
+
+.team-socials {
+    width: 206px;
+    height: 44px;
+    display: flex;
+    justify-content: space-between;
+    margin: 16px auto 0 ;
+}
+
+.socials {
+    width: 20px;
+    height: 20px;
+    fill: #AFB1B8;
+}
+
+.team-socials__item:hover .socials {
+    fill: #FFFFFF;
+}
+
+.team-socials__item {
+    width: 44px;
+    height: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.team-socials__item:hover, .team-socials__item:focus {
+    border-radius: 50%;
+    background-color: #2196F3;
+    
+}
+
 /* Постійні клієнти */
 
 .section-clients {
-    width: 1600px;
-    height: 400px;
+    padding: 94px 0;
 }
 
 .clients-text {
@@ -305,7 +342,37 @@ a {
     font-weight: 700;
     line-height: normal;
     letter-spacing: 1.08px;
-    margin-top: 94px;
+    margin-bottom: 50px;
+}
+
+.clients-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.clients-list__item {
+    width: 170px;
+    height: 92px;
+    border-radius: 4px;
+    border: 1px solid #AFB1B8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.clients-list__item:hover, .clients-list__item:focus {
+    border: 1px solid #2196F3;
+}
+
+.clients-list__item:hover .clients-list__svg {
+    fill: #2196F3;
+}
+
+.clients-list__svg {
+    width: 106px;
+    height: 60px; 
+    fill: #AFB1B8; 
 }
 
 /* footer */
@@ -327,7 +394,6 @@ a {
 }
 
 .geolocation {
-    display: flex;
     flex-direction: column;
     color: #FFF;
     font-family: 'Roboto';
@@ -384,6 +450,3 @@ button {
     letter-spacing: 0.96px;
 }
 
-.footer-btn {
-    background-image: url("../img/icons/iconsend.svg");
-}
