--- a/css/styles.css
+++ b/css/styles.css
@@ -172,25 +172,25 @@ a {
 }
 
 .features-list-item:nth-child(1) .features-subtitle::before {
-    background-image: url("../img/icons/antenna1.svg");
+    background-image: url("../img/icons/symbol-defs.svg#icon-antenna");
     background-position: center;
     background-repeat: no-repeat;
 }
 
 .features-list-item:nth-child(2) .features-subtitle::before {
-    background-image: url("../img/icons/clock1\(1\).svg");
+    background-image: url("../img/icons/symbol-defs.svg#icon-clock");
     background-position: center;
     background-repeat: no-repeat;
 }
 
 .features-list-item:nth-child(3) .features-subtitle::before {
-    background-image: url("../img/icons/diagram1\(1\).svg");
+    background-image: url("../img/icons/symbol-defs.svg#icon-astronaut");
     background-position: center;
     background-repeat: no-repeat;
 }
 
 .features-list-item:nth-child(4) .features-subtitle::before {
-    background-image: url("../img/icons/astronaut1\(1\).svg");
+    background-image: url("../img/icons/symbol-defs.svg#icon-diagram");
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -487,3 +487,120 @@ button {
     letter-spacing: 0.96px;
 }
 
+/*from*/
+
+.backdrop {
+    justify-content: center;
+    align-items: center;
+    contain: content;
+}
+
+.logo-href {
+    color: #212121;
+    text-align: center;
+    font-family: 'Roboto';
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.6px;
+}
+
+.close {
+    width: 30px;
+    height: 30px;
+    background-color: #FFF;
+    border-radius: 50px;
+    margin-left: 490px;
+}
+
+.btn {
+    width: 18px;
+    height: 18px;
+    fill:#000000;
+}
+
+.btn:hover, .btn:focus {
+    fill:#2196F3;
+}
+
+.ccc {
+    width: 448px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.20);
+}
+
+.ccc:hover, .ccc:focus {
+    border-radius: 4px;
+    border: 1px solid #2196F3;
+}
+
+.photo-svg {
+    width: 18px;
+    height: 18px;
+}
+
+.photo-svg:hover, .photo-svg:focus {
+    fill:#2196F3
+}
+
+.name {
+    color: #757575;
+    font-family: 'Roboto';
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 0.12px;
+    display: flex;
+}
+
+.comment-container-two {
+    width: 448px;
+    height: 120px;
+    color: rgba(117, 117, 117, 0.50);
+    font-family: 'Roboto';
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 0.12px;
+}
+
+.checkbox {
+    color: #757575;
+    font-family: 'Roboto';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 171.429% */
+    letter-spacing: 0.42px;
+}
+
+.checkbox-two {
+    color: #2196F3;
+    font-family: 'Roboto';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.42px;
+    text-decoration-line: underline;
+}
+
+.button-form {
+    width: 200px;
+    height: 50px;
+    border-radius: 4px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    color: #FFF;
+    text-align: center;
+    font-family: 'Roboto';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px; /* 187.5% */
+    letter-spacing: 0.96px;
+}
