--- a/css/styles.css
+++ b/css/styles.css
@@ -495,7 +495,7 @@ button {
     contain: content;
 }
 
-.logo-href {
+.modal-logo {
     color: #212121;
     text-align: center;
     font-family: 'Roboto';
@@ -503,7 +503,7 @@ button {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    letter-spacing: 0.6px;
+
 }
 
 .close {
@@ -524,28 +524,29 @@ button {
     fill:#2196F3;
 }
 
-.ccc {
+.modal-input {
     width: 448px;
     height: 40px;
     border-radius: 4px;
     border: 1px solid rgba(33, 33, 33, 0.20);
 }
 
-.ccc:hover, .ccc:focus {
+.modal-input:hover, .modal-input:focus {
     border-radius: 4px;
     border: 1px solid #2196F3;
+    background-image: url("../img/icons/symbol-defs.svg#icon-email-black");
 }
 
-.photo-svg {
+.modal-svg {
     width: 18px;
     height: 18px;
 }
 
-.photo-svg:hover, .photo-svg:focus {
+.modal-svg:hover, .modal-svg:focus {
     fill:#2196F3
 }
 
-.name {
+.modal-label {
     color: #757575;
     font-family: 'Roboto';
     font-size: 12px;
@@ -556,16 +557,22 @@ button {
     display: flex;
 }
 
-.comment-container-two {
+.modal-textarea {
+    margin-top: 4px;
+    resize: none;
+    padding: 12px 16px;
     width: 448px;
     height: 120px;
+}
+
+.modal-textarea::placeholder {
     color: rgba(117, 117, 117, 0.50);
     font-family: 'Roboto';
     font-size: 12px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 400px;
     line-height: normal;
-    letter-spacing: 0.12px;
+    letter-spacing: 0.12;
 }
 
 .checkbox {
@@ -589,7 +596,7 @@ button {
     text-decoration-line: underline;
 }
 
-.button-form {
+.modal-btn {
     width: 200px;
     height: 50px;
     border-radius: 4px;
