--- a/css/styles.css
+++ b/css/styles.css
@@ -487,6 +487,56 @@ button {
     letter-spacing: 0.96px;
 }
 
+.label-section {
+    margin-top: 72px;
+}
+
+.text-footer-two {
+    color: #FFF;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+.team-socials-footer-two {
+}
+
+.team-socials-footer__item-two {
+}
+
+.label-socials {
+    width: 358px;
+    height: 50px;
+}
+
+.input-social {
+    border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, 0.30);
+    background: rgba(33, 150, 243, 0.00);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.label-btn {
+    width: 200px;
+    height: 50px;
+    color: #FFF;
+    text-align: center;
+    font-family: 'Roboto';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px; /* 187.5% */
+    letter-spacing: 0.96px;
+    border-radius: 4px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
 /*from*/
 
 .backdrop {
