--- a/css/styles.css
+++ b/css/styles.css
@@ -196,14 +196,11 @@ a {
 }
 
 
-
 /*Чим ми займаємося*/
-
 
 
 .work {
     padding-bottom: 94px;
-
 }
 
 .work-title {
@@ -217,13 +214,6 @@ a {
     margin-bottom: 50px;
 }
 
-.photo {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-
 .work-list {
     display: flex;
     justify-content: space-between;
@@ -233,13 +223,21 @@ a {
 .work-list-item {
     width: 370px;
     height: 294px;
+}
 
+
+.photo {
+    height:70;
+    background: rgba(47, 48, 58, 0.80);
+    align-items: center;
+    text-align: center;
 }
 
 /* Наша команда */
 
 
 .team {
+    padding-top: 94px;
     background-color: #F5F4FA;
     padding: 94px 0 ;
 }
@@ -266,6 +264,11 @@ a {
     background: #FFF;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
     border-radius: 0px 0px 4px 4px;
+}
+
+.img {
+    width: 270px;
+    height: 260px;
 }
 
 .team-list-title {
