--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -12,17 +12,6 @@
         width: 520px;
     }
 
-    &-link {
-        font-family: 'Raleway';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 31px;
-        letter-spacing: 0.03em;
-        color: black;
-        text-decoration: none;
-    }
-
     &-ul1{
         display: flex;
         justify-content: space-between;
@@ -39,5 +28,42 @@
 }
 
 .Web{
+    color: #2196F3;
+}
+
+.logo-link {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
+    color: black;
+    text-decoration: none;
+}
+
+.nav-list-text:hover, .nav-list-text:focus {
+    color: #2196F3;
+}
+
+.nav-list-text{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    color: #212121;
+}
+
+.nav-list-email {
+    color: #757575;
+    font-size: 14px;
+    font-family: 'Roboto';
+    font-weight: 500;
+    letter-spacing: 0.28px;
+}
+
+.nav-list-email:hover, .nav-list-email:focus {
     color: #2196F3;
 }
