--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,10 +2,9 @@
     padding-top: 94px;
     background-color: #F5F4FA;
     padding: 94px 0 ;
-}
 
-.team-text {
-    color: #212121;
+    &__text {
+        color: #212121;
     text-align: center;
     font-size: 36px;
     font-family: 'Roboto';
@@ -13,6 +12,66 @@
     line-height: normal;
     letter-spacing: 1.08px;
     margin-bottom: 50px;
+    }
+
+    &__cards {
+        width: 270px;
+        height: 428px;
+        background: #FFF;
+        box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+        border-radius: 0px 0px 4px 4px;
+    }
+
+    &____item {
+        width: 44px;
+        height: 44px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    &__socials {
+        width: 206px;
+        height: 44px;
+        display: flex;
+        justify-content: space-between;
+        margin: 16px auto 0 ;
+    }
+
+    &__title {
+        color: #212121;
+        text-align: center;
+        font-family: 'Roboto';
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        letter-spacing: 0.48px;
+        padding-top: 20px;
+    }
+
+    &__paragraph {
+        color: #757575;
+        text-align: center;
+        font-family: 'Roboto';
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: 0.48px;
+        padding-top: 10px;
+    }
+
+    &__img {
+        width: 270px;
+        height: 260px;
+    }
+
+    &__socials {
+        width: 20px;
+        height: 20px;
+        fill: #AFB1B8;
+    }
 }
 
 .cards {
@@ -20,69 +79,8 @@
     justify-content: space-between;
 }
 
-.team-cards {
-    width: 270px;
-    height: 428px;
-    background: #FFF;
-    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-    border-radius: 0px 0px 4px 4px;
-}
-
-.img {
-    width: 270px;
-    height: 260px;
-}
-
-.team-list-title {
-    color: #212121;
-    text-align: center;
-    font-family: 'Roboto';
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: 0.48px;
-    padding-top: 20px;
-}
-
-.team-list-paragraph {
-    color: #757575;
-    text-align: center;
-    font-family: 'Roboto';
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: 0.48px;
-    padding-top: 10px;
-}
-
-/*  */
-
-.team-socials {
-    width: 206px;
-    height: 44px;
-    display: flex;
-    justify-content: space-between;
-    margin: 16px auto 0 ;
-}
-
-.socials {
-    width: 20px;
-    height: 20px;
-    fill: #AFB1B8;
-}
-
 .team-socials__item:hover .socials {
     fill: #FFFFFF;
-}
-
-.team-socials__item {
-    width: 44px;
-    height: 44px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .team-socials__item:hover, .team-socials__item:focus {
