--- a/css/main.css
+++ b/css/main.css
@@ -67,10 +67,6 @@ a {
   text-decoration: none;
 }
 
-.nav-list-text:hover, .nav-list-text:focus {
-  color: #2196F3;
-}
-
 .nav-list-text {
   font-family: "Roboto";
   font-style: normal;
@@ -79,6 +75,24 @@ a {
   line-height: 16px;
   letter-spacing: 0.02em;
   color: #212121;
+  position: relative;
+}
+.nav-list-text:hover, .nav-list-text:focus {
+  color: #2196F3;
+}
+.nav-list-text:hover::after, .nav-list-text:focus::after {
+  width: 100%;
+}
+.nav-list-text::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 44px;
+  width: 0;
+  height: 4px;
+  background-color: #2196F3;
+  border-radius: 2px;
+  transition: width 250ms linear;
 }
 
 .nav-list-email {
@@ -257,8 +271,7 @@ a {
   background-color: #F5F4FA;
   padding: 94px 0;
 }
-
-.team-text {
+.team__text {
   color: #212121;
   text-align: center;
   font-size: 36px;
@@ -268,26 +281,31 @@ a {
   letter-spacing: 1.08px;
   margin-bottom: 50px;
 }
-
-.cards {
-  display: flex;
-  justify-content: space-between;
+.team .cards-list {
+  width: 100%;
 }
-
-.team-cards {
+.team__cards {
   width: 270px;
   height: 428px;
   background: #FFF;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   border-radius: 0px 0px 4px 4px;
 }
-
-.img {
-  width: 270px;
-  height: 260px;
+.team__item {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-.team-list-title {
+.team__socials {
+  width: 206px;
+  height: 44px;
+  display: flex;
+  justify-content: space-between;
+  margin: 16px auto 0;
+}
+.team__title {
   color: #212121;
   text-align: center;
   font-family: "Roboto";
@@ -298,8 +316,7 @@ a {
   letter-spacing: 0.48px;
   padding-top: 20px;
 }
-
-.team-list-paragraph {
+.team__paragraph {
   color: #757575;
   text-align: center;
   font-family: "Roboto";
@@ -310,32 +327,23 @@ a {
   letter-spacing: 0.48px;
   padding-top: 10px;
 }
-
-/*  */
-.team-socials {
-  width: 206px;
-  height: 44px;
-  display: flex;
-  justify-content: space-between;
-  margin: 16px auto 0;
+.team__img {
+  width: 270px;
+  height: 260px;
 }
-
-.socials {
+.team__socials {
   width: 20px;
   height: 20px;
   fill: #AFB1B8;
 }
 
-.team-socials__item:hover .socials {
-  fill: #FFFFFF;
+.cards {
+  display: flex;
+  justify-content: space-between;
 }
 
-.team-socials__item {
-  width: 44px;
-  height: 44px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.team-socials__item:hover .socials {
+  fill: #FFFFFF;
 }
 
 .team-socials__item:hover, .team-socials__item:focus {
@@ -392,15 +400,24 @@ a {
 .footer {
   background: #2F303A;
 }
-
-.footer .content-container {
-  display: flex;
-}
-
-.footer-contact {
+.footer__contact {
   width: 231px;
   margin-right: 70px;
   padding: 60px 0;
+}
+.footer__join {
+  padding: 72px 0 100px;
+  margin-right: 93px;
+  width: 206px;
+}
+.footer__socials {
+  width: 20px;
+  height: 20px;
+  fill: #FFF;
+}
+
+.footer .content-container {
+  display: flex;
 }
 
 .logo {
@@ -434,12 +451,6 @@ a {
   margin-bottom: 9px;
 }
 
-.footer-join {
-  padding: 72px 0 100px;
-  margin-right: 93px;
-  width: 206px;
-}
-
 .text-footer {
   color: #FFF;
   font-family: "Roboto", sans-serif;
@@ -463,13 +474,7 @@ a {
   fill: #FFF;
 }
 
-.footer-socials {
-  width: 20px;
-  height: 20px;
-  fill: #FFF;
-}
-
-.team-socials-footer__item {
+.team-socials-footer__item-two {
   width: 44px;
   height: 44px;
   display: flex;
@@ -479,7 +484,7 @@ a {
   border-radius: 50%;
 }
 
-.team-socials-footer__item:hover, .team-socials-footer__item:focus {
+.team-socials-footer__item-two:hover, .team-socials-footer__item-two:focus {
   background-color: #2196F3;
 }
 
@@ -501,6 +506,7 @@ button {
 
 .label-section {
   margin-top: 72px;
+  margin-bottom: 94px;
 }
 
 .text-footer-two {
@@ -518,6 +524,7 @@ button {
 .label-socials {
   width: 358px;
   height: 50px;
+  margin-top: 108px;
 }
 
 .input-social {
@@ -530,17 +537,17 @@ button {
 .label-btn {
   width: 200px;
   height: 50px;
+  border-radius: 4px;
+  background: #2196F3;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #FFF;
   text-align: center;
   font-family: "Roboto";
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
-  line-height: 30px; /* 187.5% */
+  line-height: 1.87; /* 187.5% */
   letter-spacing: 0.96px;
-  border-radius: 4px;
-  background: #2196F3;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .backdrop {
@@ -550,7 +557,7 @@ button {
   position: fixed;
 }
 
-.modal-logo {
+.modal-title {
   color: #212121;
   text-align: center;
   font-family: "Roboto";
@@ -568,7 +575,7 @@ button {
   margin-left: 490px;
 }
 
-.btn {
+.modal-svg-close {
   width: 18px;
   height: 18px;
   fill: #FFF;
