--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -66,10 +66,6 @@ a {
   text-decoration: none;
 }
 
-.nav-list-text:hover, .nav-list-text:focus {
-  color: #2196F3;
-}
-
 .nav-list-text {
   font-family: "Roboto";
   font-style: normal;
@@ -78,6 +74,24 @@ a {
   line-height: 16px;
   letter-spacing: 0.02em;
   color: #212121;
+  position: relative;
+}
+.nav-list-text:hover, .nav-list-text:focus {
+  color: #2196F3;
+}
+.nav-list-text:hover::after, .nav-list-text:focus::after {
+  width: 100%;
+}
+.nav-list-text::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 44px;
+  width: 0;
+  height: 4px;
+  background-color: #2196F3;
+  border-radius: 2px;
+  transition: width 250ms linear;
 }
 
 .nav-list-email {
@@ -95,15 +109,24 @@ a {
 .footer {
   background: #2F303A;
 }
-
-.footer .content-container {
-  display: flex;
-}
-
-.footer-contact {
+.footer__contact {
   width: 231px;
   margin-right: 70px;
   padding: 60px 0;
+}
+.footer__join {
+  padding: 72px 0 100px;
+  margin-right: 93px;
+  width: 206px;
+}
+.footer__socials {
+  width: 20px;
+  height: 20px;
+  fill: #FFF;
+}
+
+.footer .content-container {
+  display: flex;
 }
 
 .logo {
@@ -137,12 +160,6 @@ a {
   margin-bottom: 9px;
 }
 
-.footer-join {
-  padding: 72px 0 100px;
-  margin-right: 93px;
-  width: 206px;
-}
-
 .text-footer {
   color: #FFF;
   font-family: "Roboto", sans-serif;
@@ -166,13 +183,7 @@ a {
   fill: #FFF;
 }
 
-.footer-socials {
-  width: 20px;
-  height: 20px;
-  fill: #FFF;
-}
-
-.team-socials-footer__item {
+.team-socials-footer__item-two {
   width: 44px;
   height: 44px;
   display: flex;
@@ -182,7 +193,7 @@ a {
   border-radius: 50%;
 }
 
-.team-socials-footer__item:hover, .team-socials-footer__item:focus {
+.team-socials-footer__item-two:hover, .team-socials-footer__item-two:focus {
   background-color: #2196F3;
 }
 
@@ -204,6 +215,7 @@ button {
 
 .label-section {
   margin-top: 72px;
+  margin-bottom: 94px;
 }
 
 .text-footer-two {
@@ -221,6 +233,7 @@ button {
 .label-socials {
   width: 358px;
   height: 50px;
+  margin-top: 108px;
 }
 
 .input-social {
@@ -233,15 +246,15 @@ button {
 .label-btn {
   width: 200px;
   height: 50px;
+  border-radius: 4px;
+  background: #2196F3;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #FFF;
   text-align: center;
   font-family: "Roboto";
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
-  line-height: 30px; /* 187.5% */
+  line-height: 1.87; /* 187.5% */
   letter-spacing: 0.96px;
-  border-radius: 4px;
-  background: #2196F3;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }/*# sourceMappingURL=portfolio.css.map */
