--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,7 +6,7 @@
     
 }
 
-.modal-logo {
+.modal-title {
     color: #212121;
     text-align: center;
     font-family: 'Roboto';
@@ -25,7 +25,7 @@
     margin-left: 490px;
 }
 
-.btn {
+.modal-svg-close {
     width: 18px;
     height: 18px;
     fill: #FFF;;
