--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -14,6 +14,10 @@
     margin-bottom: 50px;
     }
 
+    .cards-list {
+        width: 100%;
+    }
+
     &__cards {
         width: 270px;
         height: 428px;
@@ -22,7 +26,7 @@
         border-radius: 0px 0px 4px 4px;
     }
 
-    &____item {
+    &__item {
         width: 44px;
         height: 44px;
         display: flex;
