--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -5,90 +5,76 @@
 
     &__text {
         color: #212121;
-    text-align: center;
-    font-size: 36px;
-    font-family: 'Roboto';
-    font-weight: 700;
-    line-height: normal;
-    letter-spacing: 1.08px;
-    margin-bottom: 50px;
+        text-align: center;
+        font-size: 36px;
+        font-family: 'Roboto';
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: 1.08px;
+        margin-bottom: 50px;
     }
+}
+
 
     .cards-list {
         width: 100%;
-    }
-
-    &__cards {
-        width: 270px;
-        height: 428px;
-        background: #FFF;
-        box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-        border-radius: 0px 0px 4px 4px;
-    }
-
-    &__item {
-        width: 44px;
-        height: 44px;
         display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    &__socials {
-        width: 206px;
-        height: 44px;
-        display: flex;
-        justify-content: space-between;
-        margin: 16px auto 0 ;
+
+        &__item {
+            width: 270px;
+            height: 428px;
+            border-radius: 0px 0px 4px 4px;
+            background: #FFF;
+            box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+            margin-right: 30px;
+        }
+
+        &__img {
+            width: 270px;
+            height: 260px;
+        }
+
+        &__title {
+            color: #212121;
+            text-align: center;
+            font-family: 'Roboto';
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+            letter-spacing: 0.48px;
+            margin-top: 30px;
+        }
+
+        &__paragraph {
+            color: #757575;
+            text-align: center;
+            font-family: 'Roboto';
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            letter-spacing: 0.48px;
+            margin-top: 10px;
+        }
     }
 
-    &__title {
-        color: #212121;
-        text-align: center;
-        font-family: 'Roboto';
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: normal;
-        letter-spacing: 0.48px;
-        padding-top: 20px;
-    }
-
-    &__paragraph {
-        color: #757575;
-        text-align: center;
-        font-family: 'Roboto';
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-        letter-spacing: 0.48px;
-        padding-top: 10px;
-    }
-
-    &__img {
-        width: 270px;
-        height: 260px;
-    }
-
-    &__socials {
+    .socials {
         width: 20px;
         height: 20px;
         fill: #AFB1B8;
+        margin-right: 34px;
+        margin-top: 28px;
     }
-}
 
-.cards {
-    display: flex;
-    justify-content: space-between;
-}
-
-.team-socials__item:hover .socials {
-    fill: #FFFFFF;
-}
-
-.team-socials__item:hover, .team-socials__item:focus {
-    border-radius: 50%;
-    background-color: #2196F3;
+    .team-socials__item:hover .socials {
+        fill: #FFFFFF;
+    }
     
-}
+    .team-socials__item:hover, .team-socials__item:focus {
+        width: 44px;
+        height: 44px;
+        border-radius: 50%;
+        background-color: #2196F3;
+    }
+ 
