add header, team

--- a/css/main.css
+++ b/css/main.css
@@ -33,24 +33,6 @@ a {
   margin: 0 auto;
   padding: 24px 0;
 }
-.header-left {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 520px;
-}
-.header-ul1 {
-  display: flex;
-  justify-content: space-between;
-  width: 281px;
-  align-items: center;
-}
-.header-right {
-  display: flex;
-  justify-content: space-between;
-  width: 307px;
-  align-items: center;
-}
 
 .Web {
   color: #2196F3;
@@ -67,7 +49,20 @@ a {
   text-decoration: none;
 }
 
-.nav-list-text {
+.header-nav {
+  width: 285px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-list {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-list__link {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
@@ -77,13 +72,13 @@ a {
   color: #212121;
   position: relative;
 }
-.nav-list-text:hover, .nav-list-text:focus {
+.nav-list__link:hover, .nav-list__link:focus {
   color: #2196F3;
 }
-.nav-list-text:hover::after, .nav-list-text:focus::after {
+.nav-list__link:hover::after, .nav-list__link:focus::after {
   width: 100%;
 }
-.nav-list-text::after {
+.nav-list__link::after {
   content: "";
   position: absolute;
   left: 0;
@@ -95,16 +90,30 @@ a {
   transition: width 250ms linear;
 }
 
-.nav-list-email {
+.contacts {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 333px;
+}
+.contacts__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #757575;
   font-size: 14px;
-  font-family: "Roboto";
   font-weight: 500;
   letter-spacing: 0.28px;
 }
-
-.nav-list-email:hover, .nav-list-email:focus {
+.contacts__link:hover, .contacts__link:focus {
   color: #2196F3;
+}
+.contacts__link:hover .contacts__svg, .contacts__link:focus .contacts__svg {
+  fill: #2196F3;
+}
+.contacts__svg {
+  margin-right: 10px;
+  fill: #757575;
 }
 
 .hero {
@@ -319,14 +328,29 @@ a {
   line-height: normal;
   letter-spacing: 0.48px;
   margin-top: 10px;
+  margin-bottom: 16px;
+}
+
+.team-socials {
+  display: flex;
+  width: 206px;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+.team-socials__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: transparent;
 }
 
 .socials {
   width: 20px;
   height: 20px;
   fill: #AFB1B8;
-  margin-right: 34px;
-  margin-top: 28px;
 }
 
 .team-socials__item:hover .socials {
@@ -334,9 +358,6 @@ a {
 }
 
 .team-socials__item:hover, .team-socials__item:focus {
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
   background-color: #2196F3;
 }
 
